; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/jfs/extr_inode.c_jfs_delete_inode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/jfs/extr_inode.c_jfs_delete_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.TYPE_2__ = type { i64 }

@.str = private unnamed_addr constant [34 x i8] c"In jfs_delete_inode, inode = 0x%p\00", align 1
@FILESYSTEM_I = common dso_local global i64 0, align 8
@COMMIT_Freewmap = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @jfs_delete_inode(%struct.inode* %0) #0 {
  %2 = alloca %struct.inode*, align 8
  store %struct.inode* %0, %struct.inode** %2, align 8
  %3 = load %struct.inode*, %struct.inode** %2, align 8
  %4 = call i32 @jfs_info(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), %struct.inode* %3)
  %5 = load %struct.inode*, %struct.inode** %2, align 8
  %6 = call i32 @is_bad_inode(%struct.inode* %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %35, label %8

8:                                                ; preds = %1
  %9 = load %struct.inode*, %struct.inode** %2, align 8
  %10 = call %struct.TYPE_2__* @JFS_IP(%struct.inode* %9)
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @FILESYSTEM_I, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %35

15:                                               ; preds = %8
  %16 = load %struct.inode*, %struct.inode** %2, align 8
  %17 = getelementptr inbounds %struct.inode, %struct.inode* %16, i32 0, i32 0
  %18 = call i32 @truncate_inode_pages(i32* %17, i32 0)
  %19 = load i32, i32* @COMMIT_Freewmap, align 4
  %20 = load %struct.inode*, %struct.inode** %2, align 8
  %21 = call i64 @test_cflag(i32 %19, %struct.inode* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %15
  %24 = load %struct.inode*, %struct.inode** %2, align 8
  %25 = call i32 @jfs_free_zero_link(%struct.inode* %24)
  br label %26

26:                                               ; preds = %23, %15
  %27 = load %struct.inode*, %struct.inode** %2, align 8
  %28 = call i32 @diFree(%struct.inode* %27)
  %29 = load %struct.inode*, %struct.inode** %2, align 8
  %30 = call i32 @vfs_dq_init(%struct.inode* %29)
  %31 = load %struct.inode*, %struct.inode** %2, align 8
  %32 = call i32 @vfs_dq_free_inode(%struct.inode* %31)
  %33 = load %struct.inode*, %struct.inode** %2, align 8
  %34 = call i32 @vfs_dq_drop(%struct.inode* %33)
  br label %35

35:                                               ; preds = %26, %8, %1
  %36 = load %struct.inode*, %struct.inode** %2, align 8
  %37 = call i32 @clear_inode(%struct.inode* %36)
  ret void
}

declare dso_local i32 @jfs_info(i8*, %struct.inode*) #1

declare dso_local i32 @is_bad_inode(%struct.inode*) #1

declare dso_local %struct.TYPE_2__* @JFS_IP(%struct.inode*) #1

declare dso_local i32 @truncate_inode_pages(i32*, i32) #1

declare dso_local i64 @test_cflag(i32, %struct.inode*) #1

declare dso_local i32 @jfs_free_zero_link(%struct.inode*) #1

declare dso_local i32 @diFree(%struct.inode*) #1

declare dso_local i32 @vfs_dq_init(%struct.inode*) #1

declare dso_local i32 @vfs_dq_free_inode(%struct.inode*) #1

declare dso_local i32 @vfs_dq_drop(%struct.inode*) #1

declare dso_local i32 @clear_inode(%struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
